# splinterdb

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .yamllint.yml  BUILD.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.build-env  Dockerfile.run-env  LICENSE  Makefile  NOTICE  README.md  build.sh  compile_commands.json  concourse-ci.yaml  default.cfg  format-check.sh  format_check.py  matrixkv.ini  newtests.sh  qt.out  run.sh  script.sh  set-env.sh  test-results  test.sh  timing_utils.sh
ci/: apply-pipeline.sh  jobs.lib.yml  pipeline-funcs.lib.yml  pipeline.yaml  pipeline.yml  resources.lib.yml  sequences.lib.yml  steps.lib.yml
ctests/: Makefile  README.md  ctest.h  ctests_template_dot_c  kvstore_basic_stress_test.c  kvstore_basic_test.c  kvstore_large_data_test.c  main.c  mytests.c  variable_length_btree_test.c
docs/: README.md  administration.md  architecture.md  build.md  configuration.md  diag_ts.md  diagnostics.md  docker.md  internals.md  kvs_api_refman.md  limitations.md  monitoring_tuning.md  overview.md  readme.md  testing.md  unit-testing.md  usage.md
examples/: README.md  example_common.h  splinterdb_admin_config_example.c  splinterdb_apis_example.c  splinterdb_basic_example.c  splinterdb_custom_ipv4_addr_sortcmp_example.c  splinterdb_intro_example.c  splinterdb_iterators_example.c  splinterdb_optimize_example.c  (+6 more)
rust/splinterdb-cli/: Cargo.toml  README.md
rust/splinterdb-cli/src/: main.rs
rust/splinterdb-rs/: Cargo.toml  README.md
rust/splinterdb-rs/src/: lib.rs  rust_cfg.rs  splinter_cf.rs  tests.rs  util.rs
(+474 files in other folders)
