[package]
name = "splinterdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
crossbeam-utils = "0.8.5"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
splinterdb-rs = { path = "../splinterdb-rs", features = ["serde"] }
