[package]
name = "splinterdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
splinterdb-sys = { path = "../splinterdb-sys" }
serde = { version = "1.0", optional = true, features = ["derive"] }
hex = "0.4"
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }

[dev-dependencies]
tempfile = "3.2.0"
